crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_show__v_show_merges_dynamic_style.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<span v-show=\"ok\" :style=\"{ color }\">x</span>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><span style="${_ssrRenderStyle([{ color: _ctx.color }, ((_ctx.ok) ? null : { display: "none" })])}">x</span></div>`)
}
