crates/vize_atelier_ssr/tests/snapshots/ssr_snapshot__v_show__v_show_with_other_attrs.snap
---
source: crates/vize_atelier_ssr/tests/ssr_snapshot.rs
expression: "get_compiled_string(r#\"<div id=\"foo\" v-show=\"bar\">hello</div>\"#)"
---
function ssrRender(_ctx, _push, _parent, _attrs) {
  _push(`<div${_ssrRenderAttrs(_attrs)}><div id="foo"${((_ctx.bar) ? "" : " style=\"display: none;\"")}>hello</div></div>`)
}
